# NeuronsXnets

./: .gitignore  BenchRotate.cpp  BitArray.hpp  CMakeLists.txt  Readme.md  StaticBitArray.hpp  TestBitArray.cpp  TestStaticBitArray.cpp  testrot.cpp
